--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <meta property="og:title" content="기성 & 해솔의 결혼식에 초대합니다">
     <meta property="og:description" content="2026년 5월 2일, 저희의 시작을 함께해주세요.">
-    <meta property="og:image" content="statics/images/gallery_10.jpg">
+    <meta property="og:image" content="{{ url_for('static', filename='images/gallery_10.jpg') }}">
     <title>결혼합니다</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -354,24 +354,24 @@
                     <div class="acc-row">
                         <div class="acc-detail">
                             <div class="acc-info-line">
-                                <span class="acc-bank">{{ data.groom_account_bank }}</span>
-                                <span class="acc-num">{{ data.groom_account }}</span>
-                            </div>
-                            <span class="acc-who">{{ data.groom_name }}</span>
-                        </div>
-                        <button class="copy-btn" data-copy="{{ data.groom_account }}">복사</button>
-                    </div>
-                </div>
-                <div class="acc-body">
-                    <div class="acc-row">
-                        <div class="acc-detail">
-                            <div class="acc-info-line">
                                 <span class="acc-bank">{{ data.groom_parent_account_bank }}</span>
                                 <span class="acc-num">{{ data.groom_parent_account }}</span>
                             </div>
                             <span class="acc-who">{{ data.groom_parent_account_name }}</span>
                         </div>
                         <button class="copy-btn" data-copy="{{ data.groom_parent_account }}">복사</button>
+                    </div>
+                </div>
+                <div class="acc-body">
+                    <div class="acc-row">
+                        <div class="acc-detail">
+                            <div class="acc-info-line">
+                                <span class="acc-bank">{{ data.groom_account_bank }}</span>
+                                <span class="acc-num">{{ data.groom_account }}</span>
+                            </div>
+                            <span class="acc-who">{{ data.groom_name }}</span>
+                        </div>
+                        <button class="copy-btn" data-copy="{{ data.groom_account }}">복사</button>
                     </div>
                 </div>
             </div>
@@ -383,24 +383,24 @@
                     <div class="acc-row">
                         <div class="acc-detail">
                             <div class="acc-info-line">
-                                <span class="acc-bank">{{ data.bride_account_bank }} </span>
-                                <span class="acc-num">{{ data.bride_account }}</span>
-                            </div>
-                            <span class="acc-who">{{ data.bride_name }}</span>
-                        </div>
-                        <button class="copy-btn" data-copy="{{ data.bride_account }}">복사</button>
-                    </div>
-                </div>
-                <div class="acc-body">
-                    <div class="acc-row">
-                        <div class="acc-detail">
-                            <div class="acc-info-line">
                                 <span class="acc-bank">{{ data.bride_parent_account_bank }} </span>
                                 <span class="acc-num">{{ data.bride_parent_account }}</span>
                             </div>
                             <span class="acc-who">{{ data.bride_parent_account_name }}</span>
                         </div>
                         <button class="copy-btn" data-copy="{{ data.bride_parent_account }}">복사</button>
+                    </div>
+                </div>
+                <div class="acc-body">
+                    <div class="acc-row">
+                        <div class="acc-detail">
+                            <div class="acc-info-line">
+                                <span class="acc-bank">{{ data.bride_account_bank }} </span>
+                                <span class="acc-num">{{ data.bride_account }}</span>
+                            </div>
+                            <span class="acc-who">{{ data.bride_name }}</span>
+                        </div>
+                        <button class="copy-btn" data-copy="{{ data.bride_account }}">복사</button>
                     </div>
                 </div>
             </div>
