fix logic to share image in kakao

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sks3297.github.io/wedding-invitation/">
     <meta property="og:title" content="기성 & 해솔의 결혼식에 초대합니다">
     <meta property="og:description" content="2026년 5월 2일, 저희의 시작을 함께해주세요.">
     <meta property="og:image" content="{{ url_for('static', filename='images/gallery_10.jpg', _external=True) }}">
